--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="imgs/destaque8.jpg" alt="Foto 8">
             <img src="imgs/destaque9.jpg" alt="Foto 9">
         </div>
-        <a href="../pages/galeria.html">Ver Galeria</a>
+        <a href="pages/galeria.html">Ver Galeria</a>
     </section>
     <section id="sobre">
         <h2>Sobre mim</h2>
