--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
     </section>
     <footer>
-        <p>Desenvolvido por <a target="_blank" href="https://www.instagram.com/ryuudev/">@RyuuDev</a></p>
+        <p>Desenvolvido por <a target="_blank" href="https://ryuudev-12.github.io/Portfolio-v1.3/">@RyuuDev</a></p>
         <p>Todos os direitos reservados para João Emanoel</p>
     </footer>
     <script src="scripts/index.js"></script>
