Acrescentando Ícone do Instagram

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             </p>
             <div id="redes">
                 <a href="https://www.instagram.com/ryuudev/">
-                    <img src="" alt="">
+                    <img src="./imgs/instagram.svg" alt="Ícone do Instagram">
+                    Instagram
                 </a>
             </div>
             <img id="perfil" src="https://placehold.co/100x100" alt="Foto de Perfil">
