correção de bugs

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
     <main>
         <h1>vcabus</h1>
         <p>
-            VCABUS tem como função a publicação de fotos de autoria de João Emanoel, 
-            em breve poderemos ter novidades, fiquem atentos no Instagram para novas postagens e notícias sobre 
-            o site
+            VCABUS tem como função a publicação de fotos de autoria de João Emanoel
         </p>
     </main>
     <section id="destaques">
